syntax = "proto2";
option go_package = "../pb";

enum MsgId {
  LoginRequest = 0;
  LoginResponse = 1;
  RegisterRequest = 2;
  RegisterAckResponse = 3;
  GetPlayerInfoRequest = 4;
  GetPlayerInfoResponse = 5;
  UpdateCoinRequest = 6;
  UpdateCoinResponse = 7;
}

message MsgPacket {
  required MsgId MsgId = 1;
  required int32   PlayerId = 2;
  optional bytes Data = 3;
}